# mcp-tutorial

./: .env.example  L3.ipynb  L4.ipynb  L5.ipynb  L6.ipynb  main.py  pyproject.toml
mcp_project/: main.py  pyproject.toml
