[project]
name = "mcp-chatbot-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.68.0",
    "arxiv>=2.2.0",
    "fastmcp>=2.12.3",
    "google-genai>=1.38.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "mcp>=1.14.1",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = [
    "mcp_project",
]
